--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         box-shadow: 0 0 0 4px var(--ring);
       }
       .cta:hover {
-        background: var(--accent-hover);
+        background: #889d10;
       }
 
       .section {
@@ -175,7 +175,7 @@
         font-weight: 700;
       }
       .inline-btn:hover {
-        background: var(--accent-hover);
+        background: #889d10;
       }
 
       details {
