--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
       }
       .cta:hover {
         background: #889d10;
+        color: #fff;
       }
 
       .section {
@@ -176,6 +177,7 @@
       }
       .inline-btn:hover {
         background: #889d10;
+        color: #fff;
       }
 
       details {
